--- a/ECommerce/appsettings.json
+++ b/ECommerce/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data source = .; Initial catalog = Ecommerce ; Integrated security= true; trustservercertificate = true;MultipleActiveResultSets=True"
+  },
   "AllowedHosts": "*"
 }
